--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -11,40 +11,47 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="12dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp">
+                android:padding="15dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Product:"
+                    android:textColor="@color/endColor"
+                    android:textStyle="bold"
+                    android:textSize="21sp"/>
 
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Product"
+                    android:text=""
                     android:textColor="@color/endColor"
                     android:textFontWeight="1000"
-                    android:textSize="21dp"/>
+                    android:layout_marginTop="33dp"
+                    android:textSize="21sp"/>
 
                 <Button
                     android:id="@+id/delete_button"
-                    android:layout_width="60dp"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="20dp"
+                    android:layout_marginLeft="270dp"
                     android:background="@color/endColor"
                     android:text="Delete"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"/>
 
                 <Button
                     android:id="@+id/edit_button"
-                    android:layout_width="60dp"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="147dp"
-                    android:layout_toEndOf="@+id/name"
                     android:background="@color/endColor"
+                    android:layout_marginLeft="180dp"
                     android:text="edit"
                     android:textColor="@color/white" />
 
