--- a/app/src/main/res/layout/card2.xml
+++ b/app/src/main/res/layout/card2.xml
@@ -12,39 +12,32 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="12dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="76dp"
-                android:padding="10dp">
+                android:layout_height="wrap_content"
+                android:padding="15dp">
 
                 <TextView
                     android:id="@+id/name"
-                    android:layout_width="163dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="13dp"
-                    android:layout_marginBottom="20dp"
                     android:text="Store"
+                    android:layout_marginTop="7dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:textColor="@color/endColor"
-                    android:textFontWeight="1000"
-                    android:textSize="21dp" />
+                    android:textStyle="bold"
+                    android:textSize="24sp" />
 
                 <Button
                     android:id="@+id/go_to_store_button"
-                    android:layout_width="50dp"
-                    android:layout_height="40dp"
-                    android:layout_alignBottom="@+id/name"
-                    android:layout_marginStart="325dp"
-                    android:layout_marginBottom="-13dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="260dp"
                     android:background="@color/endColor"
-                    android:text="go"
+                    android:text="Visit"
                     android:textColor="@color/white" />
 
 
