--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -13,49 +13,74 @@
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp"
-            android:layout_margin="15dp">
+            android:layout_margin="12dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp">
+                android:padding="15dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Name:"
+                    android:textColor="@color/endColor"
+                    android:textStyle="bold"
+                    android:textSize="21sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="35dp"
+                    android:text="Price:"
+                    android:textColor="@color/endColor"
+                    android:textStyle="bold"
+                    android:textSize="21sp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="70dp"
+                    android:text="Quantity:"
+                    android:textColor="@color/endColor"
+                    android:textStyle="bold"
+                    android:textSize="21sp"/>
 
                 <TextView
                     android:id="@+id/product_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Name:"
+                    android:text=""
                     android:textColor="@color/endColor"
-                    android:textFontWeight="1000"
+                    android:layout_marginLeft="70dp"
                     android:textSize="21sp"/>
 
                 <TextView
                     android:id="@+id/product_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="33dp"
-                    android:text="Price: "
+                    android:layout_marginTop="35dp"
+                    android:text=""
+                    android:layout_marginLeft="65dp"
                     android:textColor="@color/endColor"
-                    android:textFontWeight="1000"
                     android:textSize="21sp"/>
                 <TextView
                     android:id="@+id/product_quantity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="63dp"
-                    android:text="Quantity: "
+                    android:layout_marginTop="70dp"
+                    android:text=""
+                    android:layout_marginLeft="94dp"
                     android:textColor="@color/endColor"
-                    android:textFontWeight="1000"
                     android:textSize="21sp"/>
 
                 <Button
                     android:id="@+id/delete_btn"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="151dp"
-                    android:layout_marginEnd="14dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_toEndOf="@+id/product_name"
+                    android:background="@color/endColor"
+                    android:layout_marginLeft="240dp"
+                    android:layout_marginTop="20dp"
+                    android:textColor="@color/white"
                     android:text="Delete" />
 
 
