--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -17,8 +17,8 @@
             android:id="@+id/edit_product_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Product"
-            android:textSize="20dp"
+            android:hint="Enter Product Name"
+            android:textSize="20sp"
             android:singleLine="true"/>
 
     </RelativeLayout>
