--- a/app/src/main/res/layout/order_view_card.xml
+++ b/app/src/main/res/layout/order_view_card.xml
@@ -12,19 +12,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
-            android:layout_margin="10dp"
+            android:layout_margin="12dp"
             app:cardElevation="10dp">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp">
+                android:padding="15dp">
 
                 <TextView
                     android:id="@+id/product_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Name:"
+                    android:text=""
                     android:textColor="@color/endColor"
+                    android:layout_marginLeft="70dp"
                     android:textFontWeight="1000"
                     android:textSize="21sp"/>
 
@@ -33,7 +34,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="33dp"
-                    android:text="Price: "
+                    android:text=""
+                    android:layout_marginLeft="68dp"
                     android:textColor="@color/endColor"
                     android:textFontWeight="1000"
                     android:textSize="21sp"/>
@@ -42,9 +44,35 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="63dp"
-                    android:text="Quantity: "
+                    android:text=""
+                    android:layout_marginLeft="98dp"
                     android:textColor="@color/endColor"
                     android:textFontWeight="1000"
+                    android:textSize="21sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Name:"
+                    android:textColor="@color/endColor"
+                    android:textStyle="bold"
+                    android:textSize="21sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="33dp"
+                    android:text="Price: "
+                    android:textColor="@color/endColor"
+                    android:textStyle="bold"
+                    android:textSize="21sp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="63dp"
+                    android:text="Quantity: "
+                    android:textColor="@color/endColor"
+                    android:textStyle="bold"
                     android:textSize="21sp"/>
 
 
