--- a/app/src/main/res/layout/orders_customer_card.xml
+++ b/app/src/main/res/layout/orders_customer_card.xml
@@ -11,42 +11,41 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="12dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp">
+                android:padding="15dp">
+
+                <TextView
+                    android:id="@+id/status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="OrderID:"
+                    android:textColor="@color/endColor"
+                    android:textStyle="bold"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Order"
-                    android:textColor="@color/endColor"
-                    android:textFontWeight="1000"
-                    android:textSize="15sp" />
-
-                <TextView
-                    android:id="@+id/status"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignRight="@id/name"
-                    android:layout_marginLeft="100dp"
-                    android:layout_marginEnd="1000dp"
+                    android:layout_marginTop="30dp"
                     android:text=""
-                    android:textColor="@color/white" />
+                    android:textColor="@color/endColor"
+                    android:textSize="15sp"/>
 
                 <Button
                     android:id="@+id/view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:layout_marginStart="259dp"
-                    android:background="@color/endColor"
+                    android:layout_width="90dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="260dp"
+                    android:backgroundTint="@color/endColor"
                     android:text="View"
-                    android:textSize="10sp"
+                    android:textSize="13sp"
                     android:textColor="@color/white" />
 
 
