--- a/app/src/main/res/layout/product_card.xml
+++ b/app/src/main/res/layout/product_card.xml
@@ -13,19 +13,19 @@
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp"
-            android:layout_margin="10dp">
+            android:layout_margin="12dp">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp">
+                android:padding="15dp">
 
                 <TextView
                     android:id="@+id/product_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Product Name:"
                     android:textColor="@color/endColor"
                     android:textFontWeight="1000"
+                    android:layout_marginLeft="67dp"
                     android:textSize="20sp"/>
 
                 <TextView
@@ -33,22 +33,38 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="33dp"
-                    android:text="Price: "
                     android:textColor="@color/endColor"
+                    android:layout_marginLeft="60dp"
                     android:textFontWeight="1000"
+                    android:textSize="20sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Name:"
+                    android:textColor="@color/endColor"
+                    android:textStyle="bold"
+                    android:textSize="20sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="33dp"
+                    android:text="Price:"
+                    android:textStyle="bold"
+                    android:textColor="@color/endColor"
                     android:textSize="20sp"/>
 
                 <Button
                     android:id="@+id/preview_btn"
-                    android:layout_width="110dp"
+                    android:layout_width="90dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="140dp"
-                    android:layout_marginEnd="14dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_toEndOf="@+id/product_name"
-                    android:background="@color/endColor"
+                    android:layout_marginLeft="260dp"
+                    android:layout_marginTop="5dp"
+                    android:backgroundTint="@color/endColor"
                     android:textColor="@color/white"
-                    android:text="Preview" />
+                    android:text="Preview"
+                    android:textSize="13sp"/>
 
 
             </RelativeLayout>
