--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     android:padding="15dp"
     android:background="@drawable/new_gradient"
-    tools:context=".Login">
+    tools:context=".LoginView">
 
 <!--    <Button-->
 <!--        android:layout_width="300dp"-->
